# scribe_rag

./: README.md  notes.md
scribe/: .coverage  .env  .env.template  .gitignore  Makefile  README.md  bootstrap.py  e2e_script.sh  log_config.yaml  monitor.sh  pyproject.toml  pytest.ini  start.sh
scribe/log_configs/: dev.yaml
scribe/src/: bootstrap.py  di_container.py  enums.py  main.py
scribe/src/adapters/: async_vector_client.py  chat_model.py  chroma_models.py  codecs.py  encoding.py  msg_chunk.py  orm_models.py  repository.py  serializable.py  uow.py  vector_collection_repository.py
scribe/src/api/: app.py  start_api.py
scribe/src/domain/: base.py  models.py  services.py
scribe/src/enums/: __init__.py  chat_model.json  unstructured_loader.json
scribe/src/handlers/: api_key_credential.py  app_start.py  app_start_handler.py  base_chat.py  chat.py  chat_model.py  doc_processing_cnf.py  document.py  document_loader.py  embedding_model.py  load_document.py  scribe_dir_setup.py  sem_doc_proc_cnf.py  system_prompt.py  vector_collection.py  vector_document.py  vector_store.py
scribe/src/jsons/: unstructured_loader.json
scribe/src/services/: chat.py
scribe/src/system/: dir.py  encr.py  folder.py  logging.py  utils.py
scribe/tests/async/: test_document_loader.py  test_load_document.py
scribe/tests/documents/: test_load_document.py
scribe/tests/e2e/: conftest.py  test_api_key_endpoints.py  test_api_root_endpoint.py  test_base_chat_endpoints.py  test_chat_model_endpoints.py  test_doc_processing_cnf_endpoints.py  (+5 more)
scribe_api/: pyproject.toml
(+104 files in other folders)
