[tool.poetry]
name = "scribe"
version = "0.1.0"
description = ""
authors = ["Oleksii Horchynskyi <pan.alexeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-cli = "^0.0.5"
fastapi = "^0.115.2"
pytest = "^8.3.3"
chromadb = "^0.5.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
