[tool.poetry]
name = "scribe"
version = "0.1.0"
description = ""
authors = ["Oleksii Horchynskyi <pan.alexeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi-cli = "^0.0.5"
fastapi = "^0.115.2"
pytest = "^8.3.3"
chromadb = "^0.5.15"
dependency-injector = "^4.42.0"
mediatr = "^1.3.2"
sqlalchemy = "^2.0.36"
cryptography = "^43.0.3"
coloredlogs = "^15.0.1"
python-dotenv = "^1.0.1"
faker = "^30.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
