[tool.poetry]
name = "scribe-api"
version = "0.1.0"
description = ""
authors = ["Oleksii Horchynskyi <pan.alexeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
